2010-12-06 
----------

* Incluidas las ubicaciones en el core para que se puedan utilizar por distintos módulos.
 

2010-12-06 
----------

* Display de notificaciones y mensajes pendientes y total
* Implementanda respuesta a notificaciones y mensajes en local
* Navegabilidad entre vistas de mensajes y notificaciones
* Acceso directo a la información de la empresa desde un correo. 


2010-12-05 
----------

* Incluidas notificaciones y mensajes. 
* Incluido will_paginate
* Incluido delayed_job para las consultas distribuidas

2010-11-27 
----------

* Eliminamos acts_as_taggable_on_steroids por acts-as-taggable-on 
* Incluimos una shell de instalación install.sh 
* Incluimos un fichero con instrucciones de instalación INSTALL 
