@@ -1,3 +1,5 @@
 log/
 tmp/
 vendor/
+**/.DS_Store
+.DS_Store
