@@ -9,23 +9,13 @@ gem 'authlogic', :git => 'git://github.com/odorcicd/authlogic.git', :branch => '
 gem 'paperclip', :git => 'git://github.com/thoughtbot/paperclip.git'
 gem 'acts_as_ferret', '= 0.5.2', :git => "git://github.com/primerano/acts_as_ferret.git"
 gem 'delayed_job' 
-gem "will_paginate", "~> 3.0.pre2"
-
-
-# To use debugger
-# gem 'ruby-debug'
-
-# Bundle the extra gems:
-# gem 'bj'
-# gem 'nokogiri'
-# gem 'sqlite3-ruby', :require => 'sqlite3'
-# gem 'aws-s3', :require => 'aws/s3'
-
-# Bundle gems for the local environment. Make sure to
-# put test-only gems in this group so their generators
-# and rake tasks are available in development mode:
-# group :development, :test do
-#   gem 'webrat'
-# end
+gem 'will_paginate', "~> 3.0.pre2"
 
 gem "bazarcms", :path => '../bazarcms'
+
+# gem 'bazarcms', :git => "git://github.com/GARUMfundatio/bazarcms.git"
+
+group :development, :test do
+	gem 'ruby-debug'
+end
+
