@@ -1,2 +1,0 @@
-class Ubicacion < ActiveRecord::Base
-end
