@@ -1,17 +1,0 @@
-<%= form_for(@ubicacion) do |f| %>
-  <% if @ubicacion.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@ubicacion.errors.count, "error") %> prohibited this ubicacion from being saved:</h2>
-
-      <ul>
-      <% @ubicacion.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
