@@ -1,6 +1,0 @@
-<h1>Editing ubicacion</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @ubicacion %> |
-<%= link_to 'Back', ubicaciones_path %>
