@@ -1,21 +1,0 @@
-<h1>Listing ubicaciones</h1>
-
-<table>
-  <tr>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @ubicaciones.each do |ubicacion| %>
-  <tr>
-    <td><%= link_to 'Show', ubicacion %></td>
-    <td><%= link_to 'Edit', edit_ubicacion_path(ubicacion) %></td>
-    <td><%= link_to 'Destroy', ubicacion, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Ubicacion', new_ubicacion_path %>
