@@ -1,5 +1,0 @@
-<h1>New ubicacion</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', ubicaciones_path %>
