@@ -1,5 +1,0 @@
-<p id="notice"><%= notice %></p>
-
-
-<%= link_to 'Edit', edit_ubicacion_path(@ubicacion) %> |
-<%= link_to 'Back', ubicaciones_path %>
